infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mad-learning-api
spec:
  selector:
    app: mad-learning-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 80
