infrastructure/kubernetes/ingress-master.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mad-learning-master
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.org/mergeable-ingress-type: master
spec:
  rules:
  - host: learning.mad.itera.no
  tls:
  - hosts:
    - learning.mad.itera.no
    secretName: mad-learning-tls-secret
